kubernetes/network-old/apps/calico-system/calico/addons/whisker/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: whisker-ingress
  namespace: calico-system
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: network
        - podSelector:
            matchLabels:
              app.kubernetes.io/instance: nginx-internal
  egress:
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: whisker
      ports:
        - protocol: TCP
          port: 8081
  podSelector:
    matchLabels:
      app.kubernetes.io/name: whisker
  policyTypes:
    - Ingress
    - Egress
